# Raytracing

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt
src/: ArgumentParser.cpp  ArgumentParser.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Config.cpp  Config.hpp  Dielectric.cpp  Dielectric.hpp  EntryPoint.cpp  Hitable.hpp  HitableList.cpp  HitableList.hpp  Image.cpp  Image.hpp  Lambertian.cpp  Lambertian.hpp  Material.hpp  Materials.cpp  Materials.hpp  Metal.cpp  Metal.hpp  Random.cpp  Random.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Timer.cpp  Timer.hpp  Types.hpp
src/Core/: Buffer.hpp  Config.cpp  Config.hpp  Random.cpp  Random.hpp  Timer.cpp  Timer.hpp  Types.hpp
src/Error/: BaseError.hpp
src/Materials/: Dielectric.cpp  Dielectric.hpp  Lambertian.cpp  Lambertian.hpp  Material.hpp  Metal.cpp  Metal.hpp
src/Renderer/: Error.cpp  Error.hpp  Image.cpp  Image.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  RendererError.cpp  RendererError.hpp
src/Scene/: Camera.cpp  Camera.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp
src/Scene/Materials/: Dielectric.cpp  Dielectric.hpp  HitRecord.hpp  Lambertian.cpp  Lambertian.hpp  Material.hpp  Materials.hpp  Metal.cpp  Metal.hpp
